syntax = "proto3";

option csharp_namespace = "DataFileGrpcService";

package filetransferservice;

// The service definition.
service FileTransferNotification {
  // Sends a Notification
  rpc IsReadyForDownload (ClientMessage) returns (FileFound);
  rpc StartDownload (ClientMessage) returns (FileDetails);
  rpc EndDownload (ClientMessage) returns (FileFound);
}

message FileFound {
  bool found = 1;
}

message FileDetails {
  string file_name = 1;
  int32 num_parts = 2;
  int64 file_size_bytes = 3;
}

message ClientMessage {
  string message = 1;
}
